Added native cpp code to project and update build script