@@ -1,26 +1,25 @@
-package ch.szclsb.test.ffm;
+package ch.szclsb.main.ffm;
 
-import ch.szclsb.test.ffm.export.INativeMethodHandler;
+import ch.szclsb.main.ffm.export.INativeMethodHandler;
 
 import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
-import java.lang.invoke.MethodType;
 
 public class NativeMethodHandlerImpl implements INativeMethodHandler {
     private static final Linker LINKER = Linker.nativeLinker();
     private static final SymbolLookup LOADER = SymbolLookup.loaderLookup();
 
     private static MemorySegment loadSymbol(String name) {
-        return LOADER.lookup(name).orElseThrow(() -> new UnsatisfiedLinkError("unable to find symbol " + name));
+        return LOADER.find(name).orElseThrow(() -> new UnsatisfiedLinkError("unable to find symbol " + name));
     }
 
-    private static void upcall(MemoryAddress address) {
+    private static void upcall(MemorySegment address) {
         var message = address.getUtf8String(0);
         System.out.println("Upcall: " + message);
     }
 
-    private final MemorySession session;
+    private final Arena session;
 
     private final MethodHandle printHelloNative;
     private final MethodHandle passHelloNative;
@@ -28,18 +27,19 @@ public class NativeMethodHandlerImpl implements INativeMethodHandler {
 
     private final MemorySegment upcallStub;
 
-    public NativeMethodHandlerImpl(MemorySession session) {
+    public NativeMethodHandlerImpl(Arena session) {
         this.session = session;
 
         var dir = System.getProperty("user.dir");
-        System.load(dir + "/lib/test_ffm_native.dll");
+        System.load(dir + "/build-native/Debug/ffm.dll");
         this.printHelloNative = LINKER.downcallHandle(loadSymbol("printHello"), FunctionDescriptor.ofVoid());
         this.passHelloNative = LINKER.downcallHandle(loadSymbol("passHello"), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
         this.vec4addNative = LINKER.downcallHandle(loadSymbol("vec4add"), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
 
         try {
-            var methodHandle = MethodHandles.lookup().findStatic(NativeMethodHandlerImpl.class, "upcall", MethodType.methodType(void.class, MemoryAddress.class));
-            this.upcallStub = LINKER.upcallStub(methodHandle, FunctionDescriptor.ofVoid(ValueLayout.ADDRESS), session);
+            var upcallDescriptor = FunctionDescriptor.ofVoid(ValueLayout.ADDRESS.asUnbounded());
+            var methodHandle = MethodHandles.lookup().findStatic(NativeMethodHandlerImpl.class, "upcall", upcallDescriptor.toMethodType());
+            this.upcallStub = LINKER.upcallStub(methodHandle, upcallDescriptor, session.scope());
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
